# Animation_Research_Toolkit

./: .gitignore  .gitmodules  README.md
back_up_files/: two_layer.py
back_up_files/draw_obj/: CMakeLists0.txt  main0.cpp  vertex.vertexshader
draw_arm/: CMakeLists.txt  main.cpp
draw_bvh/: CMakeLists.txt  New Text Document.txt  main.cpp
draw_bvh_nn/: CMakeLists.txt  bvh_predict_q_v2.pth  bvh_predict_xyz_trans_q.pth  main.cpp  q_traced.pt  q_traced_v2.pt  test.bvh  test_q.bvh  test_q2.bvh  traced.pt
draw_bvh_nn_q/: CMakeLists.txt  main.cpp
draw_bvh_trajectory/: CMakeLists.txt  jump.bvh  main.cpp
draw_bvh_trajectory_q/: CMakeLists.txt  main.cpp
draw_bvh_trajectory_q_compare/: CMakeLists.txt  main.cpp
draw_cuboid/: CMakeLists.txt  ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  main.cpp
draw_obj/: CMakeLists.txt  fragment.fragmentshader  main.cpp  vertex.vertexshader
draw_obj/headers/: filesystem.h  mesh.h  model.h  shader_m.h  shader_s.h
draw_obj/loader/: controls.cpp  objloader.cpp  objloader.hpp  texture.cpp
draw_obj/resources/objects/chair/: chair.mtl
glad3/include/glad/: glad.h
glad3/src/: glad.c
glad4/include/glad/: glad.h
glad4/src/: glad.c
nn_test/: bvh_wow.pt  bvhmodulenew_xyz_trans2.pt  main.cpp  test.bvh
one_triangle/: CMakeLists.txt  main.cpp
one_triangle_copy/: main.cpp
one_triangle_copy/bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assignment1.sln  assignment1.vcxproj  assignment1.vcxproj.filters  cmake_install.cmake
one_triangle_copy/bulid/Debug/: assignment1.ilk
one_triangle_copy/bulid/assignment1.dir/Debug/: assignment1.exe.recipe
one_triangle_copy/bulid/assignment1.dir/Debug/assignment1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  assignment1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
one_triangle_copy/bulid/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
one_triangle_copy/bulid/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
utility/: ycdraw.cpp  ycdraw.h  ycmatrix.cpp  ycmatrix.h
